--- a/Index.html
+++ b/Index.html
@@ -6,27 +6,34 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="author" content="Cesar Gonzalez">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--Google Fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Fredoka+One&family=Josefin+Sans:wght@300;400;700&family=Pacifico&display=swap" rel="stylesheet"> 
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Fredoka+One&family=Josefin+Sans:wght@300;400;700&family=Pacifico&display=swap"
+        rel="stylesheet">
+    <!--FontAwesome-->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
+        integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
+    <!--Bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">     
-    <link rel="stylesheet" href="assets/css/style.css">  
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <!--Jquery-->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"
+        integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="assets/css/style.css">
     <title>Viajes Chile</title>
 </head>
 
 <body>
 
     <header>
+      <!--Navbar-->  
         <nav class="navbar navbar-expand-lg navbar-light bg-light ">
             <div class="container">
-                <a class="navbar-brand" href="#"><img class="viajes" src="assets/img/viajes.svg" alt="Viajes Chile"></a>
+                <a class="navbar-brand" href="#"><img class="viajes" src="assets/img/viajes.svg" alt="viajesChile"></a>
                 <a class="navbar-brand texto01" href="#">Viajes Chile</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
                     <ul class="navbar-nav">
                         <li class="nav-item">
@@ -45,6 +52,7 @@
                 </div>
             </div>
         </nav>
+        <!--Carousel-->  
         <div id="carouselExampleFade" class="carousel slide carouselSlide" data-bs-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
@@ -67,52 +75,41 @@
             </button>
         </div>
     </header>
-
+    <!--Grilla Quienes Somos-->  
     <section id="receta-texto" class="container">
         <div class="container">
             <div class="row quienesSomos">
                 <h2>Quienes Somos</h2>
                 <hr>
                 <div class="col-12 col-sm-12 col-md-4 col-lx-4 parrafoSomos">
-                    <h6 class="cambio-color fw-bold"><i class="fas fa-plane fa-3x iconoS3"></i></h6>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Optio quidem at placeat cupiditate culpa dicta perferendis itaque provident fugit in soluta, aut asperiores. Explicabo pariatur quis, consequuntur maxime incidunt fugit?
-                    </p>
+                    <i class="fas fa-plane fa-3x container-fluid iconoS3"></i>
+                    <h6>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus porro beatae distinctio deleniti hic aut quas repudiandae, iure quo. Delectus numquam laudantium facilis alias, tenetur aperiam eos sit veritatis asperiores. Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus porro beatae distinctio deleniti hic aut quas repudiandae, iure quo. Delectus numquam laudantium facilis alias, tenetur aperiam eos sit veritatis asperiores.
+                    </h6>
                 </div>
                 <div class="col-12 col-sm-12 col-md-4 col-lx-4 parrafoSomos">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia fugit excepturi quasi commodi modi magni placeat fugiat numquam officia, ullam laudantium rerum magnam itaque voluptatem vitae at praesentium ducimus iste?
-                    </p>
-                    <h6 class="cambio-color fw-bold"><i class="fas fa-globe-americas fa-3x iconoS3"></i></h6>
+                    <h6>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus porro beatae distinctio deleniti hic aut quas repudiandae, iure quo. Delectus numquam laudantium facilis alias, tenetur aperiam eos sit veritatis asperiores. Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus porro beatae distinctio deleniti hic aut quas repudiandae, iure quo. Delectus numquam laudantium facilis alias, tenetur aperiam eos sit veritatis asperiores.
+                    </h6>
+                    <i class="fas fa-globe-americas fa-3x container-fluid iconoS3"></i>
                 </div>
                 <div class="col-12 col-sm-12 col-md-4 col-lx-4 parrafoSomos">
-                    <h6 class="cambio-color fw-bold"><i class="fas fa-map-marked-alt fa-3x iconoS3"></i></h6>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita tenetur numquam deserunt hic ullam blanditiis, sunt adipisci, architecto delectus quisquam quis consequuntur deleniti officiis a, sed ducimus placeat officia corporis?
-                    </p>
+                    <i class="fas fa-map-marked-alt fa-3x container-fluid iconoS3"></i>
+                    <h6>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus porro beatae distinctio deleniti hic aut quas repudiandae, iure quo. Delectus numquam laudantium facilis alias, tenetur aperiam eos sit veritatis asperiores. Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus porro beatae distinctio deleniti hic aut quas repudiandae, iure quo. Delectus numquam laudantium facilis alias, tenetur aperiam eos sit veritatis asperiores.
+                    </h6>
                 </div>
             </div>
         </div>
     </section>
-        
-
-
-
-
-
-
-
-
+    <!--Grilla Destacados-->  
     <section class="card-gener">
         <div class="row" id="Destacados">
             <h2>Destacados</h2>
-
-    <hr>
+            <hr>
             <div class="col-12 col-sm-12 col-md-3">
                 <div class="card">
                     <a href="#!" data-bs-toggle="modal" data-bs-target="#modalImagen01"><img src="assets/img/card1.jpg" class="card-img-top" alt=""></a>
                     <div class="card-body">
-                        <h5 class="card-title">Lorem ipsum dolor, sit amet consectetur adipisicing elit.</h5>
-                        <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem velit
-                            dolorem sit molestiae repudiandae asperiores a inventore, nam, nobis, laborum architecto sunt
-                            necessitatibus repellat quos.</p>
+                        <h4 class="card-title">Lorem ipsum dolor, sit amet consectetur adipisicing elit.</h4>
+                        <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus porro beatae distinctio deleniti hic aut quas repudiandae, iure quo. Delectus numquam laudantium facilis alias, tenetur aperiam eos sit veritatis asperiores.</p>
                     </div>
                 </div>
             </div>
@@ -120,10 +117,8 @@
                 <div class="card">
                     <a href="#!" data-bs-toggle="modal" data-bs-target="#modalImagen02"><img src="assets/img/card2.jpg" class="card-img-top" alt=""></a>
                     <div class="card-body">
-                        <h5 class="card-title">Lorem ipsum, dolor sit amet consectetur adipisicing elit.</h5>
-                        <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quas totam itaque
-                            mollitia sed unde tempora nam non officiis dolorem, quaerat voluptatibus asperiores
-                            reprehenderit, maxime aliquam deserunt.</p>
+                        <h4 class="card-title">Lorem ipsum, dolor sit amet consectetur adipisicing elit.</h4>
+                        <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus porro beatae distinctio deleniti hic aut quas repudiandae, iure quo. Delectus numquam laudantium facilis alias, tenetur aperiam eos sit veritatis asperiores.</p>
                     </div>
                 </div>
             </div>
@@ -131,10 +126,8 @@
                 <div class="card">
                     <a href="#!" data-bs-toggle="modal" data-bs-target="#modalImagen03"><img src="assets/img/card3.jpg" class="card-img-top" alt=""></a>
                     <div class="card-body">
-                        <h5 class="card-title">Lorem ipsum dolor sit amet consectetur adipisicing elit.</h5>
-                        <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus aliquam quas,
-                            eos harum eius in et natus sunt dolor quibusdam! Saepe consequatur accusantium eos ex veniam
-                            quaerat, neque quam sint.</p>
+                        <h4 class="card-title">Lorem ipsum dolor sit amet consectetur adipisicing elit.</h4>
+                        <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus porro beatae distinctio deleniti hic aut quas repudiandae, iure quo. Delectus numquam laudantium facilis alias, tenetur aperiam eos sit veritatis asperiores.</p>
                     </div>
                 </div>
             </div>
@@ -142,64 +135,66 @@
                 <div class="card">
                     <a href="#!" data-bs-toggle="modal" data-bs-target="#modalImagen04"><img src="assets/img/card4.jpg" class="card-img-top" alt=""></a>
                     <div class="card-body">
-                        <h5 class="card-title">Lorem ipsum dolor sit amet consectetur adipisicing elit</h5>
-                        <p class="card-text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vel ea delectus nobis
-                            tempora quibusdam explicabo nostrum vero cumque fuga! Similique vel architecto placeat
-                            voluptatibus corrupti soluta optio</p>
+                        <h4 class="card-title">Lorem ipsum dolor sit amet consectetur adipisicing elit</h4>
+                        <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus porro beatae distinctio deleniti hic aut quas repudiandae, iure quo. Delectus numquam laudantium facilis alias, tenetur aperiam eos sit veritatis asperiores.</p>
                     </div>
                 </div>
             </div>
         </div>
     </section>
-
+    <!--Modal Imagenes Destacados-->  
     <div tabindex="-1" aria-labelledby="modalImagen01" aria-hidden="true" class="modal fade" id="modalImagen01">
         <div class="modal-dialog modal-lg modal-dialog-centered">
-           <div class="modal-content">
-               <img src="assets/img/card1.jpg">
-           </div>
+            <div class="modal-content">
+                <img src="assets/img/card1.jpg" alt="">
+                <button type="button" class="btn btn-info" data-bs-toggle="tooltip" data-bs-placement="bottom"
+                    title="Dale Click">
+                    Estas a un click de saber mas
+                </button>
+            </div>
         </div>
     </div>
     <div tabindex="-1" aria-labelledby="modalImagen02" aria-hidden="true" class="modal fade" id="modalImagen02">
         <div class="modal-dialog modal-lg modal-dialog-centered">
-           <div class="modal-content">
-               <img src="assets/img/card2.jpg">
-           </div>
+            <div class="modal-content">
+                <img src="assets/img/card2.jpg" alt="">
+                <button type="button" class="btn btn-info" data-bs-toggle="tooltip" data-bs-placement="bottom"
+                    title="Dale Click">
+                    Estas a un click de saber mas
+                </button>
+            </div>
         </div>
     </div>
     <div tabindex="-1" aria-labelledby="modalImagen03" aria-hidden="true" class="modal fade" id="modalImagen03">
         <div class="modal-dialog modal-lg modal-dialog-centered">
-           <div class="modal-content">
-               <img src="assets/img/card3.jpg">
-           </div>
+            <div class="modal-content">
+                <img src="assets/img/card3.jpg" alt="">
+                <button type="button" class="btn btn-info" data-bs-toggle="tooltip" data-bs-placement="bottom"
+                    title="Dale Click">
+                    Estas a un click de saber mas
+                </button>
+            </div>
         </div>
     </div>
     <div tabindex="-1" aria-labelledby="modalImagen04" aria-hidden="true" class="modal fade" id="modalImagen04">
         <div class="modal-dialog modal-lg modal-dialog-centered">
-           <div class="modal-content">
-               <img src="assets/img/card4.jpg">
-           </div>
+            <div class="modal-content">
+                <img src="assets/img/card4.jpg" alt="">
+                <button type="button" class="btn btn-info" data-bs-toggle="tooltip" data-bs-placement="bottom"
+                    title="Dale Click">
+                    Estas a un click de saber mas
+                </button>
+            </div>
         </div>
     </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+    <!--Formulario Contacto-->  
+    <section class="formulario">
+        <div class="row" id="Contacto">
+            <h2>Contacto</h2>
+            <hr>
+        </div>
+    </section>
+    <!--Footer-->  
     <footer id="contacto" class="oscuro">
         <div class="container-fuid fondo2">
             <div class="row pt-5">
@@ -207,18 +202,15 @@
                     <h1>Viajes Chile</h1>
                 </div>
                 <div class="col-12 col-sm-6 text-ligth">
-                    <a href="https://github.com"><i class="fab fa-github-square fa-3x my-3"></i></a>
-                    <a href="https://www.linkedin.com"><i class="fab fa-linkedin fa-3x"></i></a>
-                    <a href="https://twitter.com"><i class="fab fa-twitter-square fa-3x"></i></a>
-                    <a href="https://facebook.com"><i class="fab fa-facebook-square fa-3x"></i></i></a>
+                    <a href="#"><i class="fab fa-github-square fa-3x px-2"></i></a>
+                    <a href="#"><i class="fab fa-linkedin fa-3x px2"></i></a>
+                    <a href="#"><i class="fab fa-twitter-square fa-3x px-2"></i></a>
+                    <a href="#"><i class="fab fa-facebook-square fa-3x px-1"></i></a>
                 </div>
             </div>
         </div>
     </footer>
 
-
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"
-        integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
         integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
         crossorigin="anonymous"></script>
