--- a/Index.html
+++ b/Index.html
@@ -147,7 +147,7 @@
         <div class="modal-dialog modal-lg modal-dialog-centered">
             <div class="modal-content">
                 <img src="assets/img/card1.jpg" alt="">
-                <button type="button" class="btn btn-info" data-bs-toggle="tooltip" data-bs-placement="bottom"
+                <button id="boton" type="button" class="btn btn-info" data-bs-toggle="tooltip" data-bs-placement="bottom"
                     title="Dale Click">
                     Estas a un click de saber mas
                 </button>
@@ -158,7 +158,7 @@
         <div class="modal-dialog modal-lg modal-dialog-centered">
             <div class="modal-content">
                 <img src="assets/img/card2.jpg" alt="">
-                <button type="button" class="btn btn-info" data-bs-toggle="tooltip" data-bs-placement="bottom"
+                <button id="boton" type="button" class="btn btn-info" data-bs-toggle="tooltip" data-bs-placement="bottom"
                     title="Dale Click">
                     Estas a un click de saber mas
                 </button>
@@ -169,7 +169,7 @@
         <div class="modal-dialog modal-lg modal-dialog-centered">
             <div class="modal-content">
                 <img src="assets/img/card3.jpg" alt="">
-                <button type="button" class="btn btn-info" data-bs-toggle="tooltip" data-bs-placement="bottom"
+                <button id="boton" type="button" class="btn btn-info" data-bs-toggle="tooltip" data-bs-placement="bottom"
                     title="Dale Click">
                     Estas a un click de saber mas
                 </button>
@@ -180,7 +180,7 @@
         <div class="modal-dialog modal-lg modal-dialog-centered">
             <div class="modal-content">
                 <img src="assets/img/card4.jpg" alt="">
-                <button type="button" class="btn btn-info" data-bs-toggle="tooltip" data-bs-placement="bottom"
+                <button id="boton" type="button" class="btn btn-info" data-bs-toggle="tooltip" data-bs-placement="bottom"
                     title="Dale Click">
                     Estas a un click de saber mas
                 </button>
@@ -192,6 +192,8 @@
         <div class="row" id="Contacto">
             <h2>Contacto</h2>
             <hr>
+            <div data-tf-widget="b0yAbURv" data-tf-iframe-props="title=ViajesChile" style="width:100%;height:400px;"></div> 
+            <script src="//embed.typeform.com/next/embed.js"></script>
         </div>
     </section>
     <!--Footer-->  
@@ -202,10 +204,10 @@
                     <h1>Viajes Chile</h1>
                 </div>
                 <div class="col-12 col-sm-6 text-ligth">
-                    <a href="#"><i class="fab fa-github-square fa-3x px-2"></i></a>
-                    <a href="#"><i class="fab fa-linkedin fa-3x px2"></i></a>
-                    <a href="#"><i class="fab fa-twitter-square fa-3x px-2"></i></a>
-                    <a href="#"><i class="fab fa-facebook-square fa-3x px-1"></i></a>
+                    <a href="https://github.com" target="_blank"><i class="fab fa-github-square fa-3x px-2"></i></a>
+                    <a href="https://www.linkedin.com" target="_blank"><i class="fab fa-linkedin fa-3x px2"></i></a>
+                    <a href="https://twitter.com" target="_blank"><i class="fab fa-twitter-square fa-3x px-2"></i></a>
+                    <a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook-square fa-3x px-1"></i></a>
                 </div>
             </div>
         </div>
