Se incirpora funcion de desaparecer a seccion Quienes Somos a menor tamaño, se corrigen errores en estructura HTML, se corrigue click de las card y de documenta CSS

--- a/Index.html
+++ b/Index.html
@@ -76,7 +76,7 @@
         </div>
     </header>
     <!--Grilla Quienes Somos-->  
-    <section id="receta-texto" class="container">
+    <section id="receta-texto" class="container d-none d-xl-block">
         <div class="container">
             <div class="row quienesSomos">
                 <h2>Quienes Somos</h2>
@@ -108,8 +108,8 @@
                 <div class="card">
                     <a href="#!" data-bs-toggle="modal" data-bs-target="#modalImagen01"><img src="assets/img/card1.jpg" class="card-img-top" alt=""></a>
                     <div class="card-body">
-                        <h4 class="card-title">Lorem ipsum dolor, sit amet consectetur adipisicing elit.</h4>
-                        <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus porro beatae distinctio deleniti hic aut quas repudiandae, iure quo. Delectus numquam laudantium facilis alias, tenetur aperiam eos sit veritatis asperiores.</p>
+                        <h4 class="card-title01">Lorem ipsum dolor, sit amet consectetur adipisicing elit.</h4>
+                        <p class="card-text01">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus porro beatae distinctio deleniti hic aut quas repudiandae, iure quo. Delectus numquam laudantium facilis alias, tenetur aperiam eos sit veritatis asperiores.</p>
                     </div>
                 </div>
             </div>
@@ -117,8 +117,8 @@
                 <div class="card">
                     <a href="#!" data-bs-toggle="modal" data-bs-target="#modalImagen02"><img src="assets/img/card2.jpg" class="card-img-top" alt=""></a>
                     <div class="card-body">
-                        <h4 class="card-title">Lorem ipsum, dolor sit amet consectetur adipisicing elit.</h4>
-                        <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus porro beatae distinctio deleniti hic aut quas repudiandae, iure quo. Delectus numquam laudantium facilis alias, tenetur aperiam eos sit veritatis asperiores.</p>
+                        <h4 class="card-title02">Lorem ipsum, dolor sit amet consectetur adipisicing elit.</h4>
+                        <p class="card-text02">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus porro beatae distinctio deleniti hic aut quas repudiandae, iure quo. Delectus numquam laudantium facilis alias, tenetur aperiam eos sit veritatis asperiores.</p>
                     </div>
                 </div>
             </div>
@@ -126,8 +126,8 @@
                 <div class="card">
                     <a href="#!" data-bs-toggle="modal" data-bs-target="#modalImagen03"><img src="assets/img/card3.jpg" class="card-img-top" alt=""></a>
                     <div class="card-body">
-                        <h4 class="card-title">Lorem ipsum dolor sit amet consectetur adipisicing elit.</h4>
-                        <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus porro beatae distinctio deleniti hic aut quas repudiandae, iure quo. Delectus numquam laudantium facilis alias, tenetur aperiam eos sit veritatis asperiores.</p>
+                        <h4 class="card-title03">Lorem ipsum dolor sit amet consectetur adipisicing elit.</h4>
+                        <p class="card-text03">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus porro beatae distinctio deleniti hic aut quas repudiandae, iure quo. Delectus numquam laudantium facilis alias, tenetur aperiam eos sit veritatis asperiores.</p>
                     </div>
                 </div>
             </div>
@@ -135,8 +135,8 @@
                 <div class="card">
                     <a href="#!" data-bs-toggle="modal" data-bs-target="#modalImagen04"><img src="assets/img/card4.jpg" class="card-img-top" alt=""></a>
                     <div class="card-body">
-                        <h4 class="card-title">Lorem ipsum dolor sit amet consectetur adipisicing elit</h4>
-                        <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus porro beatae distinctio deleniti hic aut quas repudiandae, iure quo. Delectus numquam laudantium facilis alias, tenetur aperiam eos sit veritatis asperiores.</p>
+                        <h4 class="card-title04">Lorem ipsum dolor sit amet consectetur adipisicing elit</h4>
+                        <p class="card-text04">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus porro beatae distinctio deleniti hic aut quas repudiandae, iure quo. Delectus numquam laudantium facilis alias, tenetur aperiam eos sit veritatis asperiores.</p>
                     </div>
                 </div>
             </div>
@@ -147,7 +147,7 @@
         <div class="modal-dialog modal-lg modal-dialog-centered">
             <div class="modal-content">
                 <img src="assets/img/card1.jpg" alt="">
-                <button id="boton" type="button" class="btn btn-info" data-bs-toggle="tooltip" data-bs-placement="bottom"
+                <button id="boton01" type="button" class="btn btn-info" data-bs-toggle="tooltip" data-bs-placement="bottom"
                     title="Dale Click">
                     Estas a un click de saber mas
                 </button>
@@ -158,7 +158,7 @@
         <div class="modal-dialog modal-lg modal-dialog-centered">
             <div class="modal-content">
                 <img src="assets/img/card2.jpg" alt="">
-                <button id="boton" type="button" class="btn btn-info" data-bs-toggle="tooltip" data-bs-placement="bottom"
+                <button id="boton02" type="button" class="btn btn-info" data-bs-toggle="tooltip" data-bs-placement="bottom"
                     title="Dale Click">
                     Estas a un click de saber mas
                 </button>
@@ -169,7 +169,7 @@
         <div class="modal-dialog modal-lg modal-dialog-centered">
             <div class="modal-content">
                 <img src="assets/img/card3.jpg" alt="">
-                <button id="boton" type="button" class="btn btn-info" data-bs-toggle="tooltip" data-bs-placement="bottom"
+                <button id="boton03" type="button" class="btn btn-info" data-bs-toggle="tooltip" data-bs-placement="bottom"
                     title="Dale Click">
                     Estas a un click de saber mas
                 </button>
@@ -180,7 +180,7 @@
         <div class="modal-dialog modal-lg modal-dialog-centered">
             <div class="modal-content">
                 <img src="assets/img/card4.jpg" alt="">
-                <button id="boton" type="button" class="btn btn-info" data-bs-toggle="tooltip" data-bs-placement="bottom"
+                <button id="boton04" type="button" class="btn btn-info" data-bs-toggle="tooltip" data-bs-placement="bottom"
                     title="Dale Click">
                     Estas a un click de saber mas
                 </button>
